osd: Handle is_stopping() by discarding item so it doesn't loop

Fixes: http://tracker.ceph.com/issues/36105

Caused by: d9520430965e1a6f2165c34a4e89a4a8170fa9d6

Signed-off-by: David Zafman <dzafman@redhat.com>